# steamdeckcontroller

./: CMakeLists.txt  README.md  main.cpp
docker/: Dockerfile
docs/: architecture.md  cross-build-macos.md  daemon-frontend-split.md  input-translation.md  installation.md  runtime-and-latency.md  setup.md  testing.md
include/: control_protocol.hpp  control_runtime.hpp  controller_runtime.hpp  input_translation.hpp
packaging/: install-steamos.sh  prepare-gadget.sh  steamdeckcontroller-prepare.service  steamdeckcontroller.desktop  steamdeckcontroller.service  uninstall-steamos.sh
src/: control_protocol.cpp  controller_runtime_linux.cpp  daemon.cpp  input_translation.cpp
tests/: control_protocol_tests.cpp  input_translation_tests.cpp
tools/: xbox_gadget_test.cpp
